sass/_typography.sass
@use "_base" as *

$sans-serif-fonts: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"

body
  color: $foreground-color
  font-family: $sans-serif-fonts
  line-height: 1.6
  font-size: 13pt

header
  background-color: white

footer
  background-color: $heading-color
  color: white
  text-align: right

h1, h2, h3, h4, h5, h6
  color: $heading-color

h1
  font-size: 3em
  line-height: 1
a
  color: $highlight-color

.toc
  font-size: 11pt

  h2
    opacity: 0.8

  ul
    list-style: none

    li:before
      content: "\2022"
      color: $secondary-color
      display: inline-block
      width: 1em
      margin-left: -1.2em

  a
    color: $secondary-color
    text-decoration: none

    &:hover, &.active
      color: $highlight-color

  a.back-to-top:before
    content: "↑"
    display: inline-block
    width: 1em

